[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/MultiplayerGame.gd" type="Script" id=1]
[ext_resource path="res://Fonts/menubuttons.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/multiplayermenubuttons.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/textedit.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/MenuButtons.gd" type="Script" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuButtons" type="YSort" parent="."]
script = ExtResource( 5 )

[node name="Username" type="LineEdit" parent="MenuButtons"]
margin_left = 95.6818
margin_top = 28.905
margin_right = 286.682
margin_bottom = 61.905
custom_fonts/font = ExtResource( 4 )
clear_button_enabled = true
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Random" type="Button" parent="MenuButtons"]
margin_left = 58.715
margin_top = 75.095
margin_right = 311.715
margin_bottom = 112.095
custom_fonts/font = ExtResource( 2 )
text = "Random Match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="HBoxContainer" parent="MenuButtons"]
margin_left = 70.0
margin_top = 130.0
margin_right = 314.0
margin_bottom = 180.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatePrivate" type="Button" parent="MenuButtons/Create"]
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Create Private"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrivateID" type="TextEdit" parent="MenuButtons/Create"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 50 )
custom_fonts/font = ExtResource( 4 )
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="HBoxContainer" parent="MenuButtons"]
margin_left = 70.0
margin_top = 200.0
margin_right = 314.0
margin_bottom = 250.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinPrivate" type="Button" parent="MenuButtons/Join"]
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Join Private"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrivateID" type="TextEdit" parent="MenuButtons/Join"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 50 )
custom_fonts/font = ExtResource( 4 )
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
